train_then_eval mode

--- a/Run_SimCLR.ipynb
+++ b/Run_SimCLR.ipynb
@@ -25,7 +25,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!python3 run.py --train_mode=pretrain --train_batch_size=512 --train_epochs=10 --learning_rate=1.0 --weight_decay=1e-4 --temperature=0.5 --dataset=diabetic_retinopathy_detection/btgraham-300 --image_size=32 --eval_split=test --resnet_depth=18 --use_blur=False --color_jitter_strength=0.5 --model_dir=/tmp/simclr_test --data_dir=/scratch/users/rvignav/datadir --use_tpu=False\n"
+    "!python3 run.py --train_mode=pretrain --mode=train_then_eval --train_batch_size=512 --train_epochs=10 --learning_rate=1.0 --weight_decay=1e-4 --temperature=0.5 --dataset=diabetic_retinopathy_detection/btgraham-300 --image_size=32 --eval_split=test --resnet_depth=18 --use_blur=False --color_jitter_strength=0.5 --model_dir=/tmp/simclr_test --data_dir=/scratch/users/rvignav/datadir --use_tpu=False\n"
    ]
   }
  ],
