--- a/Train_SimCLR.ipynb
+++ b/Train_SimCLR.ipynb
@@ -41,27 +41,13 @@
     {
       "cell_type": "code",
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 1000
-        },
-        "id": "hsi65mRTMl0G",
-        "outputId": "41358587-0610-4318-9c8e-eb33749a81a2"
+        "id": "hsi65mRTMl0G"
       },
       "source": [
-        "%cd /scratch/users/rvignav/SimCLR\n",
-        "# !pip install -r requirements.txt"
+        "!pip install -r requirements.txt"
       ],
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "/scratch/users/rvignav/SimCLR\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -94,18 +80,13 @@
     {
       "cell_type": "code",
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 476
-        },
-        "id": "fRGSbHANMl0a",
-        "outputId": "239c1f7a-cb80-460b-9384-2898bcd7176f"
+        "id": "fRGSbHANMl0a"
       },
       "source": [
         "import csv\n",
         "class_labels = [\"none\", \"mild\", \"moderate\", \"severe\", \"proliferative\"]\n",
         "\n",
-        "csv_file = open('/scratch/users/rvignav/SimCLR/data/trainLabels.csv', mode='r')\n",
+        "csv_file = open('data/trainLabels.csv', mode='r')\n",
         "d = csv.DictReader(csv_file)\n",
         "\n",
         "fname = []\n",
@@ -113,7 +94,7 @@
         "one_hot = []\n",
         "\n",
         "for row in d:\n",
-        "    fname.append('/scratch/users/rvignav/SimCLR/data/train/' + row['image'] + '.jpeg')\n",
+        "    fname.append('data/train/' + row['image'] + '.jpeg')\n",
         "    l = int(row['level'])\n",
         "    label.append(class_labels[l])\n",
         "    arr = [0, 0, 0, 0, 0]\n",
@@ -125,91 +106,7 @@
         "df.head()"
       ],
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/html": [
-              "<div>\n",
-              "<style scoped>\n",
-              "    .dataframe tbody tr th:only-of-type {\n",
-              "        vertical-align: middle;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe tbody tr th {\n",
-              "        vertical-align: top;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe thead th {\n",
-              "        text-align: right;\n",
-              "    }\n",
-              "</style>\n",
-              "<table border=\"1\" class=\"dataframe\">\n",
-              "  <thead>\n",
-              "    <tr style=\"text-align: right;\">\n",
-              "      <th></th>\n",
-              "      <th>class_label</th>\n",
-              "      <th>class_one_hot</th>\n",
-              "      <th>filename</th>\n",
-              "    </tr>\n",
-              "  </thead>\n",
-              "  <tbody>\n",
-              "    <tr>\n",
-              "      <th>0</th>\n",
-              "      <td>none</td>\n",
-              "      <td>[1, 0, 0, 0, 0]</td>\n",
-              "      <td>/scratch/users/rvignav/SimCLR/data/train/10_le...</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>1</th>\n",
-              "      <td>none</td>\n",
-              "      <td>[1, 0, 0, 0, 0]</td>\n",
-              "      <td>/scratch/users/rvignav/SimCLR/data/train/10_ri...</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>2</th>\n",
-              "      <td>none</td>\n",
-              "      <td>[1, 0, 0, 0, 0]</td>\n",
-              "      <td>/scratch/users/rvignav/SimCLR/data/train/13_le...</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>3</th>\n",
-              "      <td>none</td>\n",
-              "      <td>[1, 0, 0, 0, 0]</td>\n",
-              "      <td>/scratch/users/rvignav/SimCLR/data/train/13_ri...</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>4</th>\n",
-              "      <td>mild</td>\n",
-              "      <td>[0, 1, 0, 0, 0]</td>\n",
-              "      <td>/scratch/users/rvignav/SimCLR/data/train/15_le...</td>\n",
-              "    </tr>\n",
-              "  </tbody>\n",
-              "</table>\n",
-              "</div>"
-            ],
-            "text/plain": [
-              "  class_label    class_one_hot  \\\n",
-              "0        none  [1, 0, 0, 0, 0]   \n",
-              "1        none  [1, 0, 0, 0, 0]   \n",
-              "2        none  [1, 0, 0, 0, 0]   \n",
-              "3        none  [1, 0, 0, 0, 0]   \n",
-              "4        mild  [0, 1, 0, 0, 0]   \n",
-              "\n",
-              "                                            filename  \n",
-              "0  /scratch/users/rvignav/SimCLR/data/train/10_le...  \n",
-              "1  /scratch/users/rvignav/SimCLR/data/train/10_ri...  \n",
-              "2  /scratch/users/rvignav/SimCLR/data/train/13_le...  \n",
-              "3  /scratch/users/rvignav/SimCLR/data/train/13_ri...  \n",
-              "4  /scratch/users/rvignav/SimCLR/data/train/15_le...  "
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 3
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -474,7 +371,7 @@
         "num_layers_ph = 2\n",
         "feat_dims_ph = [2048, 128]\n",
         "num_of_unfrozen_layers = 4\n",
-        "save_path = '/scratch/users/rvignav/models/dr'"
+        "save_path = 'models/dr'"
       ],
       "execution_count": null,
       "outputs": []
@@ -517,21 +414,6 @@
         "data_train = DataGenerator(df_train.reset_index(drop=True), **params_generator)\n",
         "data_val = DataGenerator(df_val.reset_index(drop=True), subset = \"val\", **params_generator) #val keeps the unity values on the same random places ~42\n",
         "data_test = DataGenerator(df_test.reset_index(drop=True), subset = \"test\", **params_generator) #test keeps the unity values on the diagonal"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "colab": {
-          "background_save": true
-        },
-        "collapsed": true,
-        "id": "-ipobvp7Ml1a"
-      },
-      "source": [
-        "y_predict_test_before = SimCLR.predict(data_test)"
       ],
       "execution_count": null,
       "outputs": []
@@ -597,228 +479,6 @@
           "name": "stdout"
         }
       ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "collapsed": true,
-        "id": "YfWiM4gfMl1n"
-      },
-      "source": [
-        "y_predict_test_after = SimCLR.predict(data_test)"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "MITBpHs6Ml1r"
-      },
-      "source": [
-        "## SimCLR-output check"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "collapsed": true,
-        "id": "M92VNCQHMl1s"
-      },
-      "source": [
-        "# print(f\"Random guess accuracy: {round(1/(2*batch_size),4)}\")\n",
-        "# print(f\"accuracy - test - before: {np.round(np.sum(data_test[0][1] * y_predict_test_before[:batch_size])/(2*batch_size),2)}\")\n",
-        "# print(f\"accuracy - test - after: {np.round(np.sum(data_test[0][1] * y_predict_test_after[:batch_size])/(2*batch_size),2)}\")"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "collapsed": true,
-        "id": "K7NxSEoyMl1w"
-      },
-      "source": [
-        "# print(\"y_predict_test_before\")\n",
-        "# for i in range(min(batch_size, 15)):\n",
-        "#     print(np.round(y_predict_test_before[i][i],2), end=\" | \")\n",
-        "# print(\"\\n\")    \n",
-        "# print(\"y_predict_test_after\")\n",
-        "# for i in range(min(batch_size, 15)):\n",
-        "#     print(np.round(y_predict_test_after[i][i],2), end=\" | \")\n",
-        "# print(\"\\n\") \n",
-        "# print(\"y_predict_test_after - Second diagonal\")\n",
-        "# for i in range(min(batch_size, 15)):\n",
-        "#     print(np.round(y_predict_test_after[i + 2 * batch_size][i],2), end=\" | \")\n",
-        "# print(\"\\n\")"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "IMdwX9kXMl3R"
-      },
-      "source": [
-        "## Feature Evaluation"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "pO4paMl9Ml3R"
-      },
-      "source": [
-        "### Logistic Regression"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "collapsed": true,
-        "id": "P-IHH1xVMl3S"
-      },
-      "source": [
-        "base_model = SimCLR.base_model"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 35
-        },
-        "id": "cnECT4QJMl3T",
-        "outputId": "f24df18b-daaa-4ded-9d6e-c9262adf4b0e"
-      },
-      "source": [
-        "features_train, y_train, feats = get_features(base_model, df_train, class_labels)\n",
-        "tSNE_vis(df_train, features_train, class_labels)"
-      ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "error",
-          "ename": "TypeError",
-          "evalue": "legend() missing 1 required positional argument: 'handles'",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-19-ff1e04be38bd>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mfeatures_train\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_train\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfeats\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mget_features\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mbase_model\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdf_train\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mclass_labels\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mtSNE_vis\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdf_train\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfeatures_train\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mclass_labels\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;32m/scratch/users/rvignav/SimCLR/evaluate_features.py\u001b[0m in \u001b[0;36mtSNE_vis\u001b[0;34m(df, features, class_labels, save_tag, save_figure, feats_in_plot)\u001b[0m\n\u001b[1;32m    176\u001b[0m         \u001b[0mloc\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m\"lower left\"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    177\u001b[0m         \u001b[0mncol\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 178\u001b[0;31m         \u001b[0mlabels\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mclass_labels\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    179\u001b[0m     )\n\u001b[1;32m    180\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0msave_figure\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mTypeError\u001b[0m: legend() missing 1 required positional argument: 'handles'"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "XlVebWE7Ml3Z"
-      },
-      "source": [
-        "### Fine tuned model"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "collapsed": true,
-        "id": "vhnYkrhZMl3a"
-      },
-      "source": [
-        "batch_size_classifier = 32\n",
-        "params_generator_classifier = {'max_width':width_img,\n",
-        "                            'max_height': height_img,\n",
-        "                            'num_classes': num_classes,\n",
-        "                            'VGG': True\n",
-        "                            }\n",
-        "params_training_classifier = {'1.0':{\n",
-        "                                \"reg_dense\" : 0.005,\n",
-        "                                \"reg_out\" : 0.005,\n",
-        "                                \"nums_of_unfrozen_layers\" : [5, 5, 6, 7],\n",
-        "                                \"lrs\" : [1e-3, 1e-4, 5e-5, 5e-5],\n",
-        "                                \"epochs\" : [5, 5, 15, 10]\n",
-        "                                },\n",
-        "                              '0.2':{\n",
-        "                                \"reg_dense\" : 0.075,\n",
-        "                                \"reg_out\" : 0.01,\n",
-        "                                \"nums_of_unfrozen_layers\" : [5, 5, 6, 7],\n",
-        "                                \"lrs\" : [1e-3, 1e-4, 5e-5, 5e-5],\n",
-        "                                \"epochs\" : [5, 5, 20, 15]\n",
-        "                              },\n",
-        "                              '0.05':{\n",
-        "                                \"reg_dense\" : 0.01,\n",
-        "                                \"reg_out\" : 0.02,\n",
-        "                                \"nums_of_unfrozen_layers\" : [5, 5, 6, 7],\n",
-        "                                \"lrs\" : [1e-3, 1e-4, 5e-5, 1e-5],\n",
-        "                                \"epochs\" : [5, 5, 20, 15]\n",
-        "                              }                              \n",
-        "                            }"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "collapsed": true,
-        "id": "QtoW3bL4Ml3g"
-      },
-      "source": [
-        "for fraction in fractions:    \n",
-        "    print(f\"    ==== {fraction * 100}% of the training data used ==== \\n\")\n",
-        "    SimCLR.train_NL_and_evaluate(dfs = dfs,\n",
-        "                                batch_size = batch_size_classifier,\n",
-        "                                params_generator = params_generator_classifier,\n",
-        "                                fraction = fraction,\n",
-        "                                class_labels = class_labels,\n",
-        "                                reg_dense = params_training_classifier[str(fraction)][\"reg_dense\"],\n",
-        "                                reg_out = params_training_classifier[str(fraction)][\"reg_out\"],\n",
-        "                                nums_of_unfrozen_layers = params_training_classifier[str(fraction)][\"nums_of_unfrozen_layers\"],\n",
-        "                                lrs = params_training_classifier[str(fraction)][\"lrs\"],\n",
-        "                                epochs = params_training_classifier[str(fraction)][\"epochs\"],\n",
-        "                                verbose_epoch = 0,\n",
-        "                                verbose_cycle = 0\n",
-        "                                )"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "collapsed": true,
-        "id": "PAyCxLZXMl3j"
-      },
-      "source": [
-        "features_test, y_test, feats = get_features(base_model, df_test, class_labels)\n",
-        "np.count_nonzero(features_train[0])"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "collapsed": true,
-        "id": "_WuNN1CE6Vo_"
-      },
-      "source": [
-        "# Training logistic regression classifier on 3 fractions of the data\n",
-        "# Optimal regularization is determined from a 5-fold cross-validation\n",
-        "fractions = [1.0, 0.2, 0.05]\n",
-        "for fraction in fractions:\n",
-        "    print(f\"    ==== {fraction * 100}% of the training data used ==== \\n\")\n",
-        "    linear_classifier(features_train, y_train, features_test, y_test, class_labels, fraction = fraction)"
-      ],
-      "execution_count": null,
-      "outputs": []
     }
   ]
 }
